--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ langchain==0.2.13
 langchain_google_genai==1.0.8
 langchain_community==0.2.10
 tiktoken==0.7.0
+youtube-transcript-api==0.6.2
+pytube==15.0.0
