--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ validators==0.28.1
 streamlit==1.37.1
 langchain==0.2.13
 langchain_google_genai==1.0.8
-langchain_community==0.2.10
+langchain_community
 tiktoken==0.7.0
 youtube-transcript-api==0.6.2
 pytube==15.0.0
+urllib3>=1.26.16
+unstructured
